senario2/k8s/test.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-wf
  name: test-wf
spec:
  containers:
    - image: busybox
      name: test-wf
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
